Added executions to allow debug from IDE.